[tool.poetry]
name = "radar-rio"
version = "0.1.0"
description = ""
authors = ["Rafaela Castro"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
numpy = "^1.23.3"
packaging = "^21.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
xarray = {extras = ["io"], version = "^2022.9.0"}
h5netcdf = "^1.0.2"
zarr = "^2.13.2"
cftime = "^1.6.2"
Bottleneck = "^1.3.5"
pytorch-lightning = "^1.7.7"
arm-pyart = "^1.13.2"
netCDF4 = "1.5.8"
scipy = "^1.9.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
